--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Tree::Indented.
 
+1.00  Thu Feb 11 17:36:02 EST 2010
+    - bumped to production version number
+    - added POD and tests
+    - added $Char, $Num, $Strict, $Comment
+    - added support for comments
+
 0.01  Wed Jul  9 13:09:29 2008
     - original version; created by h2xs 1.23 with options
         -AX --use-new-tests -n Tree::Indented -b 5.8.2
