--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 Revision history for Perl extension Tree::Indented.
 
+1.01  Fri Feb 12 12:26:27 EST 2010
+    - removed $Comment
+    - removed support for comments (too painful to implement just now)
+    - modified POD to get better results from pod2wiki --style tiddlywiki
+
 1.00  Thu Feb 11 17:36:02 EST 2010
-    - bumped to production version number
     - added POD and tests
     - added $Char, $Num, $Strict, $Comment
     - added support for comments
